[Modify][KnowledgeForCPlusPlus] review C++'s contents

--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -1,5 +1,5 @@
-C++与 C 有什么区别？
-解释 C++ 的多态性（polymorphism）和继承性（inheritance）。
+1. C++与 C 有什么区别？
+2. 解释 C++ 的多态性（polymorphism）和继承性（inheritance）。
 解释虚函数（virtual function）和纯虚函数（pure virtual function）。
 什么是动态绑定（dynamic binding）？它的使用场景是什么？
 解释 C++ 中的 const 关键字以及它的作用。
