--- a/BasicKnowledgeForCPLUS/2-OrientedObjectCPlusPlus/虚函数相关.md
+++ b/BasicKnowledgeForCPLUS/2-OrientedObjectCPlusPlus/虚函数相关.md
@@ -13,7 +13,7 @@
 
 ## 虚函数表
 + 虚函数表的特征
-    - 虚函数表是全剧共享的元素，即全局只有一个，在编译时期构造完成；
+    - 虚函数表是全局共享的元素，即全局只有一个，在编译时期构造完成；
     - 虚函数表类类似一个数组，类对象中存储 vptr 指针，指向虚函数表；
     - 虚函数表存储的是函数的地址，即虚函数表的元素是指向类成员函数的指针；而类中虚函数的个数在编译时期可以确定的，即虚函数表的大小可以在编译时期确定的；
 
