--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -1,8 +1,8 @@
 1. C++与 C 有什么区别？
 2. 解释 C++ 的多态性（polymorphism）和继承性（inheritance）。
 3. 解释虚函数（virtual function）和纯虚函数（pure virtual function）。
-什么是动态绑定（dynamic binding）？它的使用场景是什么？
-解释 C++ 中的 const 关键字以及它的作用。
+4. 什么是动态绑定（dynamic binding）？它的使用场景是什么？
+5. 解释 C++ 中的 const 关键字以及它的作用。
 什么是 RAII 技术？
 C++ 中有哪些内存管理方式？
 解释智能指针（smart pointer）及其作用。
