--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -3,12 +3,12 @@
 3. 解释虚函数（virtual function）和纯虚函数（pure virtual function）。
 4. 什么是动态绑定（dynamic binding）？它的使用场景是什么？
 5. 解释 C++ 中的 const 关键字以及它的作用。
-什么是 RAII 技术？
-C++ 中有哪些内存管理方式？
-解释智能指针（smart pointer）及其作用。
-什么是拷贝构造函数（copy constructor）和赋值操作符（assignment operator）？
-解释引用（reference）和指针（pointer）之间的区别。
-C++ 中的 STL 是什么？它包含哪些常用的容器类和算法？
+6. 什么是 RAII 技术？
+7. C++ 中有哪些内存管理方式？
+8. 解释智能指针（smart pointer）及其作用。
+9. 什么是拷贝构造函数（copy constructor）和赋值操作符（assignment operator）？
+10. 解释引用（reference）和指针（pointer）之间的区别。
+11. C++ 中的 STL 是什么？它包含哪些常用的容器类和算法？
 解释迭代器（iterator）及其作用。
 什么是函数对象（function object）？
 解释 lambda 表达式及其用法。
