--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -11,7 +11,7 @@
 11. C++ 中的 STL 是什么？它包含哪些常用的容器类和算法？
 12. 解释迭代器（iterator）及其作用。
 13. 什么是函数对象（function object）？
-解释 lambda 表达式及其用法。
+14. 解释 lambda 表达式及其用法。
 什么是异常（exception）？如何处理异常？异常的优缺点？
 解释编译时（compile-time）和运行时（run-time）多态（polymorphism），它们有什么区别？
 解释 RTTI（Run Time Type Identification）。
