--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -16,8 +16,8 @@
 16. 解释编译时（compile-time）和运行时（run-time）多态（polymorphism），它们有什么区别？
 17. 解释 RTTI（Run Time Type Identification）。
 18. 什么是线程（thread）？C++ 中如何创建和管理线程？
-解释互斥锁（mutex）和条件变量（condition variable）。
-什么是死锁（deadlock）？如何避免死锁？
+19. 解释互斥锁（mutex）和条件变量（condition variable）。
+20. 什么是死锁（deadlock）？如何避免死锁？
 什么是信号（signal）？在 C++ 中如何处理信号？
 什么是多进程（multiprocessing）？与多线程相比有哪些区别？
 解释内存泄漏（memory leak）及其危害？如何处理内存泄漏问题？
