[Add][Design Mode] add design mode

--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -22,11 +22,11 @@
 22. 什么是多进程（multiprocessing）？与多线程相比有哪些区别？
 23. 解释内存泄漏（memory leak）及其危害？如何处理内存泄漏问题？
 24. 什么是单例模式（singleton pattern）？解释它的优点和缺点。
-解释工厂模式（factory pattern）和抽象工厂模式（abstract factory pattern）。
-解释装饰器模式（decorator pattern）。它与继承（inheritance）有什么区别？
-什么是观察者模式（observer pattern）？
-解释迭代器模式（iterator pattern）和适配器模式（adapter pattern）。
-什么是 MVC 模式？它在 C++ 中如何应用？
+25. 解释工厂模式（factory pattern）和抽象工厂模式（abstract factory pattern）。
+26. 解释装饰器模式（decorator pattern）。它与继承（inheritance）有什么区别？
+27. 什么是观察者模式（observer pattern）？
+28. 解释迭代器模式（iterator pattern）和适配器模式（adapter pattern）。
+29. 什么是 MVC 模式？它在 C++ 中如何应用？
 什么是模板（template）？它的优缺点？
 什么是元编程（metaprogramming）？
 什么是模板特化（template specialization）？
