[Add][Generic] add the difference of template of class and function

--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -35,7 +35,7 @@
 35. C++11 中的移动语义（move semantics）是什么？它有什么作用？
 36. 解释完美转发（perfect forwarding）。
 37. 什么是 noexcept 关键字？它有什么作用？
-解释函数模板和类模板之间的区别。
+38. 解释函数模板和类模板之间的区别。
 什么是 SFINAE（Substitution Failure Is Not An Error）？
 解释区间（range）和范围（span）。
 什么是异步编程（asynchronous programming）？C++ 中如何实现异步编程？
