--- a/BasicKnowledgeForCPLUS/Question/Question_20230905.md
+++ b/BasicKnowledgeForCPLUS/Question/Question_20230905.md
@@ -37,7 +37,7 @@
 37. 什么是 noexcept 关键字？它有什么作用？
 38. 解释函数模板和类模板之间的区别。
 39. 什么是 SFINAE（Substitution Failure Is Not An Error）？
-解释区间（range）和范围（span）。
+40. 解释区间（range）和范围（span）。
 什么是异步编程（asynchronous programming）？C++ 中如何实现异步编程？
 解释 C++ 中的多线程同步机制，例如互斥量、信号量、读写锁等。
 解释多线程中的线程安全（thread safety）和竞态条件（race condition）。
