[Add][Basic C++] inline

--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -43,7 +43,7 @@
 43. 解释多线程中的线程安全（thread safety）和竞态条件（race condition）。
 44. C++ 中有哪些常见的并发编程模型，例如共享内存、消息传递等？
 45. 解释 C++11 中的原子操作（atomic operation）和 std::atomic 类型。
-什么是强制内联（forced inline）？它与普通内联（normal inline）有什么区别？
+46. 什么是强制内联（forced inline）？它与普通内联（normal inline）有什么区别？
 解释 C++ 中的静态多态（static polymorphism）和动态多态（dynamic polymorphism）。
 什么是 CRTP（Curiously Recurring Template Pattern）？它有什么作用？
 掌握 C++ 中的排序算法，例如快速排序、归并排序等。
