[Add][Design Pattern] Curiously Recurring Template Pattern

--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -45,7 +45,7 @@
 45. 解释 C++11 中的原子操作（atomic operation）和 std::atomic 类型。
 46. 什么是强制内联（forced inline）？它与普通内联（normal inline）有什么区别？
 47. 解释 C++ 中的静态多态（static polymorphism）和动态多态（dynamic polymorphism）。
-什么是 CRTP（Curiously Recurring Template Pattern）？它有什么作用？
+48. 什么是 CRTP（Curiously Recurring Template Pattern）？它有什么作用？
 掌握 C++ 中的排序算法，例如快速排序、归并排序等。
 掌握 C++ 中的查找算法，例如二分查找、哈希表等。
 解释 C++ 中的时间复杂度和空间复杂度。
