[Add][Data Structure] add red-black

--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -51,7 +51,7 @@
 51. 解释 C++ 中的时间复杂度和空间复杂度。
 52. 什么是 O(n)、O(nlogn)、O(n^2) 等时间复杂度表示法？它们分别代表什么含义？
 53. 什么是数据结构（data structure）？C++ 中常见的数据结构有哪些？
-54. 什么是红黑树（red-black tree）？它有什么作用？字节经常让你手写红黑树....
+54. 什么是红黑树（red-black tree）？它有什么作用？
 什么是 AVL 树？它有什么作用？
 什么是 B 树？它有什么作用？
 什么是哈希表（hash table）？它有什么作用？
