[Add][Data Structure] add heap

--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -55,7 +55,7 @@
 55. 什么是 AVL 树？它有什么作用？
 56. 什么是 B 树？它有什么作用？
 57. 什么是哈希表（hash table）？它有什么作用？
-什么是堆（heap）？它有什么作用？
+58. 什么是堆（heap）？它有什么作用？
 什么是堆排序（heap sort）？它有什么特点？
 什么是拓扑排序（topological sorting）？它有什么作用？
 什么是并查集（union-find set）？它有什么作用？
