--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -57,7 +57,7 @@
 57. 什么是哈希表（hash table）？它有什么作用？
 58. 什么是堆（heap）？它有什么作用？
 59. 什么是堆排序（heap sort）？它有什么特点？
-什么是拓扑排序（topological sorting）？它有什么作用？
+60. 什么是拓扑排序（topological sorting）？它有什么作用？
 什么是并查集（union-find set）？它有什么作用？
 什么是 Trie 树？它有什么作用？
 什么是最短路径算法（shortest path algorithm）？例如 Dijkstra 算法、Bellman-Ford 算法等。
