--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -59,7 +59,7 @@
 59. 什么是堆排序（heap sort）？它有什么特点？
 60. 什么是拓扑排序（topological sorting）？它有什么作用？
 61. 什么是并查集（union-find set）？它有什么作用？
-什么是 Trie 树？它有什么作用？
+62. 什么是 Trie 树？它有什么作用？
 什么是最短路径算法（shortest path algorithm）？例如 Dijkstra 算法、Bellman-Ford 算法等。
 什么是最小生成树算法（minimum spanning tree algorithm）？例如 Prim 算法、Kruskal 算法等。
 解释 C++ 中的类型推导（type inference），例如 auto 关键字和 decltype 关键字。
