--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -65,8 +65,8 @@
 65. 解释 C++ 中的类型推导（type inference），例如 auto 关键字和 decltype 关键字。
 66. 什么是模板元编程（TMP）？它有什么应用场景？
 67. C++ 中的异常处理机制有哪些，例如 try-catch 块、throw 关键字等。
-什么是 RAII 技术？它在 C++ 中有什么作用？
-C++ 中的 static 关键字有哪些用途？
+68. 什么是 RAII 技术？它在 C++ 中有什么作用？
+69. C++ 中的 static 关键字有哪些用途？
 什么是虚函数表（virtual function table）？它在 C++ 中有什么作用？
 解释 C++ 中的对象模型（object model）。
 什么是 vtable 和 vptr？它们在 C++中有什么作用？
