--- a/Question/Question_20230905.md
+++ b/Question/Question_20230905.md
@@ -67,14 +67,14 @@
 67. C++ 中的异常处理机制有哪些，例如 try-catch 块、throw 关键字等。
 68. 什么是 RAII 技术？它在 C++ 中有什么作用？
 69. C++ 中的 static 关键字有哪些用途？
-什么是虚函数表（virtual function table）？它在 C++ 中有什么作用？
-解释 C++ 中的对象模型（object model）。
-什么是 vtable 和 vptr？它们在 C++中有什么作用？
-什么是编译器优化（compiler optimization）？C++ 中有哪些常见的编译器优化技术？
-解释 C++ 中的强制类型转换（type casting），例如 static_cast、dynamic_cast、reinterpret_cast 等。
-什么是函数对象（function object）？它们在 C++ 中有什么作用？
-解释 lambda 表达式及其用法。
-什么是协程（coroutine）？它们在 C++ 中有什么应用场景？
+70. 什么是虚函数表（virtual function table）？它在 C++ 中有什么作用？
+71. 解释 C++ 中的对象模型（object model）。
+72. 什么是 vtable 和 vptr？它们在 C++中有什么作用？
+73. 什么是编译器优化（compiler optimization）？C++ 中有哪些常见的编译器优化技术？
+75. 解释 C++ 中的强制类型转换（type casting），例如 static_cast、dynamic_cast、reinterpret_cast 等。
+76. 什么是函数对象（function object）？它们在 C++ 中有什么作用？
+77. 解释 lambda 表达式及其用法。
+78. 什么是协程（coroutine）？它们在 C++ 中有什么应用场景？
 什么是异步 IO（asynchronous IO）？它在 C++ 中如何实现？解释下IO多路复用？
 解释 C++ 中的模板元编程（TMP）和泛型编程（generic programming）之间的区别。
 C++20有哪些新特性和改进？
